--- a/package.json
+++ b/package.json
@@ -1,4 +1,11 @@
 {
+  "name": "backend",
+  "version": "1.0.0",
+  "main": "server.js",
+  "license": "MIT",
+  "scripts": {
+    "start": "nodemon src/server.js --exec babel-node"
+  },
   "dependencies": {
     "graphql": "^14.3.1",
     "graphql-relay": "^0.6.0",
@@ -7,10 +14,6 @@
     "koa-graphql": "^0.8.0",
     "koa-router": "^7.4.0"
   },
-  "name": "backend",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
   "devDependencies": {
     "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.5",
