--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "nodemon src/server.js --exec babel-node"
   },
   "dependencies": {
+    "@koa/cors": "^3.0.0",
     "graphql": "^14.3.1",
     "graphql-relay": "^0.6.0",
     "koa": "^2.7.0",
