--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,5 @@
 {
     "presets": [
-        "@babel/env"
-    ],
-    "plugins": [
-        "@babel/plugin-proposal-object-rest-spread"
+        "@babel/preset-env"
     ]
 }   
